# Github_task_assign

./: .gitignore  README.md
backend/: agent.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tools.py
backend/data/: contributors.json  prompts.json  repositories.json
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AssignmentSection.jsx  ContributorSection.jsx  ModelSection.jsx  PromptSection.jsx  RepositorySection.jsx  SettingsSection.jsx  TaskSection.jsx
frontend/src/components/Chat/: ChatContainer.css  ChatContainer.jsx  ChatInput.css  ChatInput.jsx  ChatSidebar.css  ChatSidebar.jsx  MessageBubble.css  MessageBubble.jsx
frontend/src/components/Layout/: AppHeader.css  AppHeader.jsx
frontend/src/components/Settings/: SettingsDrawer.css  SettingsDrawer.jsx
frontend/src/services/: api.js  chatAPI.js
frontend/src/store/: chatStore.js  index.js
